src/regression/parse_pool/progtest1.sfp.out

sfc in program: parse_pool/progtest1.sfp
syntax error at 2 at line:
hello { blink nothing } 
^
