src/regression/parse_pool/progtest1.sfp
# Testing erroneous program definition (missing configuration keyword)
hello { blink nothing } 
start hello

